[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scenes/enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 64, 64 )

[node name="enemy" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 1
mode = 2
mass = 5.10204
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/rot = 90.0
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="RayCast2D" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, 100 )
layer_mask = 1031
type_mask = 15

[node name="RayCast_right" type="RayCast2D" parent="."]

transform/rot = 90.0
enabled = true
cast_to = Vector2( 0, 2000 )
layer_mask = 1024
type_mask = 15

[node name="RayCast_left" type="RayCast2D" parent="."]

transform/rot = 270.0
enabled = true
cast_to = Vector2( 0, 2000 )
layer_mask = 1024
type_mask = 15

[node name="turn" type="Node2D" parent="."]

transform/scale = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="turn"]

texture = ExtResource( 2 )
modulate = Color( 1, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="turn"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Action_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Wait_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


